bugFix - set steper validatot on file change

--- a/src/app/home/components/new-claim/new-claim.component.html
+++ b/src/app/home/components/new-claim/new-claim.component.html
@@ -8,7 +8,7 @@
               <input type="text" style="display:none" class="form-control" />
             </form>
 
-            <file-uploader (fileInputChange)="fileInputForm.setValue({ fileCtrl: $event?.files?.length }) ; onfileChange($event)"></file-uploader>
+            <file-uploader (fileInputChange)="onfileChange($event)"></file-uploader>
 
             <button *ngIf="hasFile" class="fontFamily" nbButton nbStepperNext type="submit">
               بعدی
