--- a/styles.scss
+++ b/styles.scss
@@ -1,4 +1,10 @@
 .tabset .tab a{
     font-family: iranSansM !important;
   } 
-  
+*{
+  font-family: iranSansM !important;
+
+}
+button{
+  cursor: pointer !important;
+}
