--- a/src/app/home/sections/features/features.component.html
+++ b/src/app/home/sections/features/features.component.html
@@ -80,16 +80,34 @@
   
     <!-- Start Video promo Section -->
     <section class="video-promo section">
-      <div class="overlay"></div>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12 col-sm-12">
-            <div class="video-promo-content text-center">
-              <a href="https://www.youtube.com/watch?v=yP6kdOZHids" class="video-popup"><i class="lni-video"></i></a>
-              <h2 class="mt-3 wow zoomIn" data-wow-duration="1000ms" data-wow-delay="100ms">نمایش دمو</h2>
-            </div>
-          </div>
-        </div>
-      </div>
+      <nb-card>
+        <nb-card-body>
+  
+          <table [nbTreeGrid]="source">
+            <tr nbTreeGridHeaderRow *nbTreeGridHeaderRowDef="allColumns"></tr>
+            <tr nbTreeGridRow *nbTreeGridRowDef="let row; columns: allColumns"></tr>
+  
+            <ng-container [nbTreeGridColumnDef]="customColumn">
+              <th nbTreeGridHeaderCell *nbTreeGridHeaderCellDef>{{customColumn}}</th>
+              <td nbTreeGridCell *nbTreeGridCellDef="let row">
+  
+                <nb-tree-grid-row-toggle
+                  [expanded]="row.expanded"
+                  *ngIf="row.data.kind === 'dir'">
+                </nb-tree-grid-row-toggle>
+  
+                {{row.data[customColumn]}}
+  
+              </td>
+            </ng-container>
+  
+            <ng-container *ngFor="let column of defaultColumns" [nbTreeGridColumnDef]="column">
+              <th nbTreeGridHeaderCell *nbTreeGridHeaderCellDef>{{column}}</th>
+              <td nbTreeGridCell *nbTreeGridCellDef="let row">{{row.data[column] || '-'}}</td>
+            </ng-container>
+          </table>
+  
+        </nb-card-body>
+      </nb-card>
     </section>
     <!-- End Video Promo Section -->
