--- a/src/app/home/sections/features/features.component.html
+++ b/src/app/home/sections/features/features.component.html
@@ -80,34 +80,40 @@
   
     <!-- Start Video promo Section -->
     <section class="video-promo section">
-      <nb-card>
-        <nb-card-body>
-  
-          <table [nbTreeGrid]="source">
-            <tr nbTreeGridHeaderRow *nbTreeGridHeaderRowDef="allColumns"></tr>
-            <tr nbTreeGridRow *nbTreeGridRowDef="let row; columns: allColumns"></tr>
-  
-            <ng-container [nbTreeGridColumnDef]="customColumn">
-              <th nbTreeGridHeaderCell *nbTreeGridHeaderCellDef>{{customColumn}}</th>
-              <td nbTreeGridCell *nbTreeGridCellDef="let row">
-  
-                <nb-tree-grid-row-toggle
-                  [expanded]="row.expanded"
-                  *ngIf="row.data.kind === 'dir'">
-                </nb-tree-grid-row-toggle>
-  
-                {{row.data[customColumn]}}
-  
-              </td>
-            </ng-container>
-  
-            <ng-container *ngFor="let column of defaultColumns" [nbTreeGridColumnDef]="column">
-              <th nbTreeGridHeaderCell *nbTreeGridHeaderCellDef>{{column}}</th>
-              <td nbTreeGridCell *nbTreeGridCellDef="let row">{{row.data[column] || '-'}}</td>
-            </ng-container>
-          </table>
-  
-        </nb-card-body>
-      </nb-card>
+      <div class="container">
+        <nb-card>
+          <nb-card-body>
+            <div class="title">
+              <h4>تراکنش های ۲۴ ساعت اخیر</h4>
+            </div>
+        
+                <table [nbTreeGrid]="source">
+                  <tr nbTreeGridHeaderRow *nbTreeGridHeaderRowDef="allColumns"></tr>
+                  <tr nbTreeGridRow *nbTreeGridRowDef="let row; columns: allColumns"></tr>
+        
+                  <ng-container [nbTreeGridColumnDef]="customColumn">
+                    <th nbTreeGridHeaderCell *nbTreeGridHeaderCellDef>{{customColumn}}</th>
+                    <td nbTreeGridCell *nbTreeGridCellDef="let row">
+        
+                      <nb-tree-grid-row-toggle
+                        [expanded]="row.expanded"
+                        *ngIf="row.data.kind === 'dir'">
+                      </nb-tree-grid-row-toggle>
+        
+                      {{row.data[customColumn]}}
+        
+                    </td>
+                  </ng-container>
+        
+                  <ng-container *ngFor="let column of defaultColumns" [nbTreeGridColumnDef]="column">
+                    <th nbTreeGridHeaderCell *nbTreeGridHeaderCellDef>{{column}}</th>
+                    <td nbTreeGridCell *nbTreeGridCellDef="let row">{{row.data[column] || '-'}}</td>
+                  </ng-container>
+                </table>
+        
+              </nb-card-body>
+            </nb-card>
+      </div>
+
     </section>
     <!-- End Video Promo Section -->
