--- a/src/app/home/components/new-record/new-record.component.html
+++ b/src/app/home/components/new-record/new-record.component.html
@@ -4,7 +4,7 @@
       <nb-tab id="tabTitle" style="font-family: iranSansM" tabTitle="ثبت جدید">
         <nb-card>
           <nb-card-body class="cardBody">
-            <nb-stepper  orientation="horizontal" >
+            <nb-stepper disableStepNavigation orientation="horizontal" >
               <nb-step [label]="labelOne" [stepControl]="fileInputForm">
                 <ng-template #labelOne>ثبت محتوا</ng-template>
                 <form [formGroup]="fileInputForm">
