--- a/src/app/home/sections/features/features.component.html
+++ b/src/app/home/sections/features/features.component.html
@@ -87,29 +87,22 @@
               <h4>تراکنش های ۲۴ ساعت اخیر</h4>
             </div>
         
-                <table [nbTreeGrid]="source">
-                  <tr nbTreeGridHeaderRow *nbTreeGridHeaderRowDef="allColumns"></tr>
-                  <tr nbTreeGridRow *nbTreeGridRowDef="let row; columns: allColumns"></tr>
-        
-                  <ng-container [nbTreeGridColumnDef]="customColumn">
-                    <th nbTreeGridHeaderCell *nbTreeGridHeaderCellDef>{{customColumn}}</th>
-                    <td nbTreeGridCell *nbTreeGridCellDef="let row">
-        
-                      <nb-tree-grid-row-toggle
-                        [expanded]="row.expanded"
-                        *ngIf="row.data.kind === 'dir'">
-                      </nb-tree-grid-row-toggle>
-        
-                      {{row.data[customColumn]}}
-        
-                    </td>
-                  </ng-container>
-        
-                  <ng-container *ngFor="let column of defaultColumns" [nbTreeGridColumnDef]="column">
-                    <th nbTreeGridHeaderCell *nbTreeGridHeaderCellDef>{{column}}</th>
-                    <td nbTreeGridCell *nbTreeGridCellDef="let row">{{row.data[column] || '-'}}</td>
-                  </ng-container>
-                </table>
+            <table class="table table-bordered">
+                <thead class="tabel-head">
+                  <tr>
+                    <th *ngFor='let col of defaultColumns' scope="col">{{col}}</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr class="tabel-row" *ngFor='let item of data'>
+                    <td>{{item.fileName}}</td>
+                    <td>{{item.transactionId}}</td>
+                    <td>{{item.fileType}}</td>
+                    <td>{{item.date}}</td>
+                  </tr>
+
+                </tbody>
+              </table>
         
               </nb-card-body>
             </nb-card>
