debug new claim

--- a/src/app/home/components/new-claim/new-claim.component.html
+++ b/src/app/home/components/new-claim/new-claim.component.html
@@ -24,7 +24,7 @@
             </form>
 
             <calim-result ></calim-result>
-            <button class="fontFamily" nbButton nbStepperNext>
+            <button class="fontFamily" nbButton nbStepperPrevious>
               قبلی
             </button>
 
